<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

<!--Authentication and layout-->
    <string name="warning">Warning</string>
    <string name="message">For use this application, you need to be agree with permissions. Please allows in Parameters</string>
    <string name="parameters">Parameters</string>
    <string name="registration">Registration</string>
    <string name="email_address">Please enter your Email address</string>
    <string name="password">Please enter your password</string>
    <string name="password_forgot">Password forgot</string>
    <string name="login" translatable="false">Login</string>
    <string name="register">Register</string>
    <string name="connect_with_mail">Connect with mail</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="request_name">First name is required!</string>
    <string name="request_mail">Email address is required</string>
    <string name="request_mail_format">Provide valid email</string>
    <string name="request_password">Password is required</string>
    <string name="request_long_password">Password must be 6 or more characters</string>
    <string name="success_account">Account Created with Success</string>
    <string name="back">Back</string>
    <string name="change_password">Check your email to reset your password</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="google">Sign in wth Google</string>
    <string name="sign_in_with_mail">Sign in with mail</string>
<!--    -->

<!--Detailed and layout-->
    <string name="no_website">No website available</string>
    <string name="no_phone">No phone number available</string>
    <string name="open_until">Open until :\ </string>
    <string name="checked_or_not" translatable="false">checked or not</string>
    <string name="call">Call</string>
    <string name="like" translatable="false">Like</string>
    <string name="website">Website</string>
<!--    -->

<!--Fragment list view and layout-->
    <string name="open">Open</string>
<!--    -->

<!--Fragment settings and layout-->
    <string name="radius">Default radius</string>
    <string name="zoom">Default zoom</string>
    <string name="hello">Hello\ </string>
    <string name="lunch_notif">You lunch to :\ </string>
    <string name="with">With :\ </string>
    <string name="nobody">Nobody</string>
    <string name="settings">Settings</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="map_choice">Default map</string>
    <string name="save">Save</string>
    <string name="lunch">Your lunch</string>
    <string name="logout">Logout</string>
    <string name="user_s_avatar" translatable="false">User\'s avatar</string>
    <string name="title_activity_maps">Map</string>
    <string name="preferences">Preferences saved</string>
    <string name="retro">Retro map</string>
    <string name="night">Night map</string>
<!--    -->

<!--Fragment workmates and layout-->
    <string name="choice">\ hasn\'t decided yet\ </string>
    <string name="eating">\ is eating to\ </string>
<!--    -->

<!--Main and layout-->
    <string name="no_result">No result match</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="search_hint">Search restaurants</string>
    <string name="no_restaurant_chosen">No restaurant chosen yet</string>
    <string name="close_app_title">Quit ?</string>
    <string name="close_app_message">Are you sure you want to quit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logo" translatable="false">logo</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="search">Search</string>
<!--    -->

<!--Multiple and other-->
    <string name="close">Close</string>
    <string name="iv_description_restaurant" translatable="false">Picture from restaurant</string>
    <string name="action_geolocate" translatable="false">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

</resources>