<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/orange"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_connection_mail_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_with_mail"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_connection_mail_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/fui_ic_mail_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_connection_mail_registration"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/et_connection_mail_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:textColor="@color/brown"
        android:hint="@string/email_address"
        android:textColorHint="@color/black"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_connection_mail_image"
        android:autofillHints="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_connection_mail_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@color/white"
        android:textColor="@color/brown"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_connection_mail_email"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_connection_mail_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login"
        app:backgroundTint="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_connection_mail_password" />

    <Button
        android:id="@+id/bt_connection_mail_forgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_forgot"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toStartOf="@id/bt_connection_mail_new"
        app:layout_constraintStart_toStartOf="@+id/bt_connection_mail_validate"
        app:layout_constraintTop_toBottomOf="@id/bt_connection_mail_validate" />

    <Button
        android:id="@+id/bt_connection_mail_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/bt_connection_mail_validate"
        app:layout_constraintStart_toEndOf="@id/bt_connection_mail_forgot"
        app:layout_constraintTop_toBottomOf="@id/bt_connection_mail_validate" />



</androidx.constraintlayout.widget.ConstraintLayout>