<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/go4lunch"
    tools:context=".ui.authentication.AuthActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/bt_auth_facebook"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="#3b5998"
        android:drawableStart="@drawable/ic_baseline_facebook_24"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/bt_auth_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        android:text="@string/facebook" />

    <Button
        android:id="@+id/bt_auth_google"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/ic_logo_gplus"
        android:text="@string/google"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#db4a39"
        app:layout_constraintBottom_toTopOf="@id/bt_auth_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_auth_facebook" />

    <Button
        android:id="@+id/bt_auth_mail"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@drawable/fui_ic_mail_white_24dp"
        android:text="@string/sign_in_with_mail"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/dark_orange"
        app:layout_constraintBottom_toTopOf="@id/bt_auth_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_auth_google" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/bt_auth_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_auth_mail" />


</androidx.constraintlayout.widget.ConstraintLayout>